--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
-
+    <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="styles.css">
 
-    <title>Read "Sabrina Online"</title>
+    <title>Read "Sabrina Online" Online!</title>
 </head>
 
 <body>
