--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="XsOnlOXxLyvQYJXlAhihX4kJAanK9nJlXy9RPDLM8hE" />
+
     <link rel="stylesheet" type="text/css" href="styles.css">
 
     <title>Read "Sabrina Online" Online!</title>
