--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="google-site-verification" content="XsOnlOXxLyvQYJXlAhihX4kJAanK9nJlXy9RPDLM8hE" />
-
     <link rel="stylesheet" type="text/css" href="styles.css">
 
     <title>Read "Sabrina Online" Online!</title>
@@ -19,7 +17,7 @@
         <p id="next">Next</p>
     </div>
 
-    <script src="script.js"></script>
+    <script src="reader.js"></script>
 </body>
 
 </html>
