--- a/index.html
+++ b/index.html
@@ -2,11 +2,16 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="styles.css">
 
-    <title>Read "Sabrina Online" Online!</title>
+    <meta charset="UTF-8">
+    <meta name="description" content="Web reader for Sabrina Online. Ads-free.">
+    <meta name="keywords" content="Sabrina,online,strip,comic,reader">
+    <meta name="author" content="Eric W. Schwartz">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Sabrina Online Reader</title>
 </head>
 
 <body>
