--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
     <meta name="author" content="Eric W. Schwartz">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <script src="sabrina_online.js"></script>
+
     <title>Sabrina Online Reader</title>
 </head>
 
 <body>
     <img id="page" src=""/>
+    <img id="buff" src=""/>
 
     <div style="display: flex">
         <p id="previous">Previous</p>
