--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta name="description" content="Web reader for Sabrina Online. Ads-free.">
     <meta name="keywords" content="Sabrina,online,strip,comic,reader">
     <meta name="author" content="Eric W. Schwartz">
+    
+    <meta name="google-site-verification" content="XsOnlOXxLyvQYJXlAhihX4kJAanK9nJlXy9RPDLM8hE" />
 
     <script src="sabrina_online.js"></script>
 
