--- a/index.html
+++ b/index.html
@@ -2,19 +2,18 @@
 <html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <title>Sabrina Online Reader</title>
+
+    <meta name="viewport" content="width=device-width">    
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="styles.css">
 
-    <meta charset="UTF-8">
     <meta name="description" content="Web reader for Sabrina Online. Ads-free.">
     <meta name="keywords" content="Sabrina,online,strip,comic,reader">
     <meta name="author" content="Eric W. Schwartz">
     
-    <meta name="google-site-verification" content="XsOnlOXxLyvQYJXlAhihX4kJAanK9nJlXy9RPDLM8hE" />
-
     <script src="sabrina_online.js"></script>
-
-    <title>Sabrina Online Reader</title>
 </head>
 
 <body>
